# infrastructure-graph

./: .gitignore  Cargo.toml  README.md  graph.json
docs/: configuring_relationships.md  graph_databases.md
docs/rules/: iam_policy_filtering.md  inline_policy_rule.md
example_files/: authorisation.tf  aws_relationships.yaml  basic.tf  discovery-minus-bad-bits.tf  discovery.tf  discovery.tfvars  inventory.tf  occlusions.yaml  policies.yaml  policy.tf  tracker.tf  variables.tf
src/: cloud_template_parser.rs  foo.rs  http_client.rs  ip_service.rs  json.rs  json_to_model.rs  lib.rs  main.rs  nom_parsers.rs  occlusion_engine.rs  policy_evaluator.rs  terraform.rs
src/relationship_finders/: mod.rs  relationship_finder.rs  tf_block_query.rs
src/relationship_finders/test_data/: iam_role_policy.json
src/structs/: attributes.rs  json.rs  mod.rs  policies.rs  template_string.rs  terraform_block.rs
src/structs/traits/: builder.rs  mod.rs  query.rs
src/visitors/: json_visitor.rs  mod.rs  relationship_finder.rs  relationship_visitor.rs  resource_visitor.rs  visitor.rs
