[package]
name = "rust_nom_json"
version = "0.1.0"
authors = ["james wilson <james.n.wilson@accenture.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.105", features = ["derive"] }
async-trait = "0.1.27"

[dev-dependencies]
jemallocator = "^0.1"