[package]
name = "rust_nom_json"
version = "0.1.0"
authors = ["james wilson <james.n.wilson@accenture.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0-alpha1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
async-trait = "0.1.27"
anyhow = "1.0"
structopt = "0.3.13"
failure = "0.1.8"
exitfailure = "0.5.1"
itertools = "0.9.0"

[dev-dependencies]
criterion = "0.3"
jemallocator = "^0.3"
doc-comment = "0.3"
